# students_list

./: .gitignore  CMakeLists.txt  back.cpp  back.h  main.cpp  qml.qrc  student.cpp  student.h  studentmodel.cpp  studentmodel.h  students_list.txt
qml/: AddStudentForm.qml  CustomDatePicker.qml  Main.qml  StudentGridView.qml
